--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,11 @@
 html,
 body {
   height: 100%;
+  font-family: Roboto, monospace, serif;
 }
 
 body {
-  background-image: url("assets/background.jpg");
+  //background-image: url("assets/background.jpg"); // TODO: Uncomment
   background-size: cover;
   background-repeat: no-repeat;
 }
