style and test page content

--- a/src/app/test-page/test-page.component.html
+++ b/src/app/test-page/test-page.component.html
@@ -1,1 +1,2 @@
-<p>test-page works!</p>
+<pbt-panel class="pbt-test-page__transfer" title="Make a Transfer" icon="arrows.png"></pbt-panel>
+<pbt-panel class="pbt-test-page__history" title="Recent Transactions" icon="briefcase.png"></pbt-panel>
