--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  //background-image: url("assets/background.jpg"); // TODO: Uncomment
+  background-image: url("assets/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
