recent transaction header

--- a/src/app/test-page/transactions-history/transactions-history.component.html
+++ b/src/app/test-page/transactions-history/transactions-history.component.html
@@ -1,1 +1,15 @@
-<p>transactions-history works!</p>
+<div class="pbt-transactions-history__toolbar">
+  <div class="form__group">
+    <input class="form__field" id="ToAccount" placeholder="Search by typing...">
+  </div>
+  <span class="spacer"></span>
+  <span class="pbt-transactions-history__sort-label">Sort by</span>
+  <div class="buttons-group">
+    <button class="button">Date</button>
+    <button class="button">Beneficiary</button>
+    <button class="button">Amount</button>
+  </div>
+</div>
+<div class="pbt-transactions-history__list">
+
+</div>
