add transaction list item

--- a/src/app/test-page/transactions-history/transactions-history.component.html
+++ b/src/app/test-page/transactions-history/transactions-history.component.html
@@ -11,5 +11,6 @@
   </div>
 </div>
 <div class="pbt-transactions-history__list">
-
+  <pbt-transaction-list-item color="red" image="aaa" beneficiary="The tea lonfsd" paymentType="Card Payment"
+                             amount="123.43"></pbt-transaction-list-item>
 </div>
