--- a/src/app/components/panel/panel.component.scss
+++ b/src/app/components/panel/panel.component.scss
@@ -1,5 +1,6 @@
 :host.pbt-panel {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   min-width: 250px;
 
   box-shadow: 0 0 1px 1px #00000020;
