--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -16,4 +16,6 @@
   text-transform: uppercase;
   background-color: transparent;
   border: 1px solid variables.$border-color;
+
+  cursor: pointer;
 }
