--- a/src/app/test-page/transactions-history/transactions-history.component.html
+++ b/src/app/test-page/transactions-history/transactions-history.component.html
@@ -1,6 +1,6 @@
 <div class="pbt-transactions-history__toolbar">
   <div class="form__group">
-    <input class="form__field" id="ToAccount" placeholder="Search by typing...">
+    <input class="form__field" id="ToAccount" [formControl]="searchField" placeholder="Search by typing...">
   </div>
   <span class="spacer"></span>
   <span class="pbt-transactions-history__sort-label">Sort by</span>
