--- a/src/app/components/panel/panel.component.html
+++ b/src/app/components/panel/panel.component.html
@@ -1,5 +1,5 @@
 <div class="pbt-panel__header">
-  <div class="pbt-panel__header-icon"><img [src]="'assets/icons/' + icon" [alt]="icon"></div>
+  <div class="pbt-panel__header-icon"><img [src]="icon" [alt]="icon"></div>
   <div class="pbt-panel__header-title">{{title}}</div>
 </div>
 <div class="pbt-panel__body">
