--- a/src/app/test-page/test-page.component.html
+++ b/src/app/test-page/test-page.component.html
@@ -1,10 +1,10 @@
 <div class="pbt-test-page__column pbt-test-page__transfer">
-  <pbt-panel title="Make a Transfer" icon="arrows.png">
+  <pbt-panel title="Make a Transfer" icon="assets/icons/arrows.png">
     <pbt-transfer-form></pbt-transfer-form>
   </pbt-panel>
 </div>
 <div class="pbt-test-page__column pbt-test-page__column--stretch pbt-test-page__history">
-  <pbt-panel title="Recent Transactions" icon="briefcase.png">
+  <pbt-panel title="Recent Transactions" icon="assets/icons/briefcase.png">
     <pbt-transactions-history></pbt-transactions-history>
   </pbt-panel>
 </div>
