--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<header>TODO: Create header</header>
+<header class="pbt-root__header">
+  <img src="assets/logo.jpg">
+</header>
 <main class="pbt-root__main">
   <router-outlet></router-outlet>
 </main>
