--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,27 @@
 :host.pbt-root {
-  $padding-v: 3rem;
-  $padding-h: 4rem;
-
-  display: block;
-  height: calc(100% - #{$padding-v} * 2);
-  width: calc(100% - #{$padding-h} * 2);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
   max-height: 100%;
   max-width: 100%;
-
-  //overflow: auto;
-  padding: $padding-v $padding-h;
 }
 
 .pbt-root {
-  &__main {
-    height: 100%;
+  &__header {
+    background-color: white;
     width: 100%;
+    padding: 1.5rem 3rem;
+    border-bottom: 2px solid #ff8850;
+
+    img {
+      height: 3rem;
+    }
+  }
+
+  &__main {
+    flex: 1;
+    padding: 3rem 4rem;
+    overflow: auto;
   }
 }
