--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="pbt-root__header">
-  <img src="assets/logo.jpg">
+  <img src="assets/logo.jpg" alt="logo">
 </header>
 <main class="pbt-root__main">
   <router-outlet></router-outlet>
