--- a/src/app/test-page/test-page.component.html
+++ b/src/app/test-page/test-page.component.html
@@ -4,7 +4,7 @@
   </pbt-panel>
 </div>
 <div class="pbt-test-page__column pbt-test-page__column--stretch pbt-test-page__history">
-  <pbt-panel title="Recent Transactions" icon="assets/icons/briefcase.png">
+  <pbt-panel title="Recent Transactions" icon="assets/icons/briefcase.png" class="pbt-panel--big-header">
     <pbt-transactions-history></pbt-transactions-history>
   </pbt-panel>
 </div>
