--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -33,5 +33,9 @@
 
     line-height: 1.5rem;
     border-bottom: 1px solid variables.$border-color;
+
+    &.ng-invalid.ng-dirty {
+      outline: 1px solid red;
+    }
   }
 }
