--- a/src/app/test-page/transfer-form/transfer-form.component.html
+++ b/src/app/test-page/transfer-form/transfer-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
   <div class="form__group form__group--stretch">
     <label class="form__label" for="FromAccount">From account</label>
-    <input class="form__field" id="FromAccount" formControlName="fromAccount" placeholder="Free Checking (4692) - {{balance$ | async | currency}}">
+    <input class="form__field" id="FromAccount" disabled placeholder="Free Checking (4692) - {{balance$ | async | currency}}">
   </div>
   <div class="form__group form__group--stretch">
     <label class="form__label" for="ToAccount">To account</label>
