--- a/src/app/test-page/test-page.component.html
+++ b/src/app/test-page/test-page.component.html
@@ -1,5 +1,6 @@
 <div class="pbt-test-page__column pbt-test-page__transfer">
-  <pbt-panel title="Make a Transfer" icon="assets/icons/arrows.png">
+  <pbt-panel title="Make a Transfer" icon="assets/icons/arrows.png"
+             i18n-title="make a transfer@@test-page.make-a-transfer.title">
     <pbt-transfer-form></pbt-transfer-form>
   </pbt-panel>
 </div>
