--- a/src/app/test-page/transfer-form/transfer-form.component.html
+++ b/src/app/test-page/transfer-form/transfer-form.component.html
@@ -1,17 +1,17 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
   <div class="form__group form__group--stretch">
-    <label class="form__label" for="FromAccount">From account</label>
+    <label class="form__label" for="FromAccount" i18n="from account label@@transfer-form.from-account.label">From account</label>
     <input class="form__field" id="FromAccount" disabled placeholder="Free Checking (4692) - {{balance$ | async | currency}}">
   </div>
   <div class="form__group form__group--stretch">
-    <label class="form__label" for="ToAccount">To account</label>
+    <label class="form__label" for="ToAccount" i18n="to account label@@transfer-form.to-account.label">To account</label>
     <input class="form__field" id="ToAccount" formControlName="toAccount" placeholder="Georgia Power Electricity Company">
   </div>
   <div class="form__group form__group--stretch">
-    <label class="form__label" for="Amount">Amount</label>
+    <label class="form__label" for="Amount" i18n="amount label@@transfer-form.amountt.label">Amount</label>
     <input class="form__field" id="Amount" formControlName="amount" type="number" step="0.01" min="0" [placeholder]="0.00 | currency">
   </div>
   <div class="pbt-transfer-form__row">
-    <button class="pbt-transfer-form__submit-button" type="submit">Submit</button>
+    <button class="pbt-transfer-form__submit-button" type="submit" i18n="submit button@@transfer-form.submit.button">Submit</button>
   </div>
 </form>
