--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -34,7 +34,7 @@
     line-height: 1.5rem;
     border-bottom: 1px solid variables.$border-color;
 
-    &.ng-invalid.ng-dirty {
+    &.ng-invalid.ng-touched {
       outline: 1px solid red;
     }
   }
